--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "@prisma/client": "^6.19.0",
     "fastify": "^5.6.2"
   }
