--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsup src/index.ts --out-dir dist",
+    "start": "node dist/index.cjs",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +20,7 @@
     "@types/node": "^24.10.1",
     "globals": "^16.5.0",
     "prisma": "^6.19.0",
+    "tsup": "^8.5.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
